tests/typing/bad/testfile-plus2-1.scala
class A { def m() { var x: Int = 1 - null } }
object Main { def main(args: Array[String]) { } }
